# cs3110-2022fa

./: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project
chap02/: dune  tailRecursion.ml  tail_recursion.ml
chap03/: dune  ex03.ml  matching.ml  myList.ml  myMatching.ml  mylist.ml  naturalNumber.ml  test.ml  test_ex03.ml  test_matching.ml  tree.ml  variant.ml
chap04/: dune  ex04.ml  higherOrder.ml  higher_order.ml  testEx04.ml  test_ex04.ml
chap05/: algebra.ml  algebra.mli  date.ml  date.mli  dune  ex05.ml  myMap.ml  myMap.mli  myQueue.ml  myQueue.mli  mySet.ml  mySet.mli  myStack.ml  myStack.mli  test_myStack.ml  useStdlibMap.ml
chap06/: dune  ex06.ml  mySet2.ml  mySet2.mli  proof_batchedqueue.txt  proof_compose.txt  proof_exp.txt  proof_fact.txt  proof_fibi.txt  proof_iteration.txt  proof_list.txt  proof_listqueue.txt  proof_liststack.txt  proof_natural.txt  proof_sumto.txt  proof_tree.txt  qcheck_avg.ml  qcheck_odd_divisor.ml  qcheck_random_lists.ml  qcheck_sorts.ml  sorts.ml  test_mySet.ml  test_sorts.ml
chap07/: counter.ml  dune  ex07.ml  fact.ml  myStack2.ml  pointer.ml  ref.ml  singlyLinkedList.ml  singlyLinkedList2.ml
chap08/: arrayMap.ml  arrayMap.mli  bstSet.ml  bstSet.mli  dune  ex08.ml  hashMap.ml  hashMap.mli  listMap.ml  listMap.mli  maybeMonad.ml  memoization.ml  monad.ml  monitor.ml  promise.ml  promise.mli  rbMap.ml  rbMap.mli  rbSet.ml  rbSet.mli  read2.ml  sequence.ml  writerMonad.ml
chap09/: .ocamlformat-ignore  churchNumeral.ml  churchNumeral2.ml  coreOCaml.md  curry_howard.ml  dune  ex09.ml  test_churchNumeral.ml  test_churchNumeral2.ml
chap09/lambda-env/src/: main.ml
chap09/lambda-subst/src/: ast.ml  main.ml
chap09/simpl/: .ocamlformat-ignore  dune  dune-project  simpl.opam
chap09/simpl/src/: ast.ml  dune  lexer.mll  main.ml  parser.mly
tail-recursion/: dune  tr.ml
