(library
 (name matching)
 (modules matching))

(library
 (name variant)
 (modules variant))

(library
 (name mylist)
 (modules mylist))

(library
 (name tree)
 (modules tree))

(library
 (name natural_number)
 (modules natural_number))

(test
 (name test)
 (modules test)
 (libraries ounit2 matching))

(library
 (name ex03)
 (modules ex03)
 (libraries ounit2 tree))
