(library
 (name matching)
 (modules matching))

(library
 (name variant)
 (modules variant))

(library
 (name myList)
 (modules myList))

(library
 (name tree)
 (modules tree))

(library
 (name naturalNumber)
 (modules naturalNumber))

(test
 (name test)
 (modules test)
 (libraries ounit2 matching))

(library
 (name ex03)
 (modules ex03)
 (libraries ounit2 tree))
