(library
 (name myMatching)
 (modules myMatching)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name variant)
 (modules variant))

(library
 (name myList)
 (modules myList))

(library
 (name tree)
 (modules tree))

(library
 (name naturalNumber)
 (modules naturalNumber))

(test
 (name test_matching)
 (modules test_matching)
 (libraries ounit2 myMatching))

(library
 (name ex03)
 (modules ex03)
 (libraries tree)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name test_ex03)
 (modules test_ex03)
 (libraries ounit2 ex03))
