(library
 (name myStack)
 (modules myStack)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name myQueue)
 (modules myQueue))

(library
 (name myMap)
 (modules myMap))

(library
 (name mySet)
 (modules mySet)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name algebra)
 (modules algebra))

(library
 (name useStdlibMap)
 (modules useStdlibMap))

(test
 (name test_myStack)
 (modules test_myStack)
 (libraries ounit2 myStack))

(library
 (name ex05)
 (modules ex05)
 (libraries myQueue myMap))

(library
 (name date)
 (modules date))
