(library
 (name listMap)
 (modules listMap))

(library
 (name arrayMap)
 (modules arrayMap))

(library
 (name hashMap)
 (modules hashMap))

(library
 (name bstSet)
 (modules bstSet))

(library
 (name rbSet)
 (modules rbSet))

(library
 (name rbMap)
 (modules rbMap)
 (libraries rbSet))

(library
 (name sequence)
 (modules sequence))
